--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open --config webpack.config.js",
-    "build":"webpack --progress --hide-modules  --config webpack.prod.config.js"
+    "build": "webpack --progress --hide-modules --mode production --config webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +26,9 @@
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3",
@@ -39,5 +40,7 @@
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue-router": "^3.0.2"
+  }
 }
