--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --config webpack.config.js",
+    "dev": "webpack-dev-server --open --history-api-fallback --config webpack.config.js",
     "build": "webpack --progress --hide-modules --mode production --config webpack.prod.config.js"
   },
   "author": "",
